--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="logo" src="WhatsApp Image 2024-10-01 at 1.32.11 PM.jpeg" alt="Logo">
+            <img class="logo" src="WhatsApp Image 2024-10-11 at 2.15.22 AM.jpeg" alt="Logo">
         </div>
         <div class="header">
             Facebook Security
